[package]
name = "jason"
version = "0.1.0"
authors = ["freemountain <dominik.freiberger@stylelounge.de>"]

[dependencies]
clap = "2.31.2"
# serde = "1.0.66"
serde_json = "1.0.21"
jsonnet-rs = "0.6"

[dependencies.formats]
path = "components/formats"

[workspace]
members = [
  "components/formats",
]